--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -199,6 +199,16 @@ if(USE_OPENMP)
   endif()
 endif()
 
+if(USE_LAPACK)
+  add_definitions(-DMXNET_USE_LAPACK=1)
+else(USE_LAPACK)
+  # Workaround for Windows until using new Jenkinsfile. 
+  if(USE_BLAS STREQUAL "open")
+    add_definitions(-DMXNET_USE_LAPACK=1)
+  endif()
+endif()
+
+
 if(UNIX)
   find_library(RTLIB rt)
   if(RTLIB)
